# bbbm

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  bbbm  bbbm1  config.h.in  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  bbbm.c  bbbm.h  command.c  command.h  command_item.c  command_item.h  compat.h  dialogs.c  dialogs.h  image.c  image.h  main.c  options.c  options.h  util.c  util.h
tools/: migrate.py
